tests/examples/good/misc/good102.lat
int main() {
    int a1;
    int a2 = 0;

    a1++;
    a2--;
    return 0;
}
