tests/examples/bad/invalid_decrement.lat
int main() {
    boolean b;
    b--;
    return 1;
}